--- a/rebar.config
+++ b/rebar.config
@@ -22,6 +22,7 @@
 {port_env, [
     {".*", "ERL_LDFLAGS", " -L$ERL_EI_LIBDIR -lei"},
     {"(linux|darwin)", "CFLAGS", "$CFLAGS -O2 -finline-functions -fomit-frame-pointer -fno-strict-aliasing -Wmissing-prototypes -Wall -std=c99"},
+    {"(linux|darwin)", "CXXFLAGS", "$CXXFLAGS -std=c++11"},
     {"win32", "DRV_LINK_CXX_TEMPLATE", "$CC $ERL_CFLAGS $PORT_IN_FILES /link /DLL /MACHINE:X64 $DRV_LDFLAGS /OUT:$PORT_OUT_FILE"}
 ]}.
 
